# pyile_manager

./: .gitignore  README.md  main.py  pyproject.toml
pyile_manager_backend/: .gitignore  README.md  SWIFT_INTEGRATION.md  file_extractor.py  main.py  ollama_api.py  pyile_manager_setting.json  pyproject.toml  setting.py  test_ai_rename.py
pyile_manager_gui/: README_GUI.md
pyile_manager_gui/pyile_manager/: ContentView.swift  pyile_manager.entitlements  pyile_managerApp.swift
pyile_manager_gui/pyile_manager.xcodeproj/: project.pbxproj
pyile_manager_gui/pyile_manager.xcodeproj/project.xcworkspace/xcuserdata/sciencemj.xcuserdatad/: UserInterfaceState.xcuserstate
pyile_manager_gui/pyile_manager.xcodeproj/xcuserdata/sciencemj.xcuserdatad/xcschemes/: xcschememanagement.plist
pyile_manager_gui/pyile_manager/Assets.xcassets/AppIcon.appiconset/: Contents.json
pyile_manager_gui/pyile_manager/Models/: AppConfig.swift  FileEvent.swift
pyile_manager_gui/pyile_manager/Resources/Pyile/Pyile.app/Contents/Resources/: Info.plist
pyile_manager_gui/pyile_manager/Resources/pyile_manager_latest/Pyile.app/Contents/: Info.plist
pyile_manager_gui/pyile_manager/Resources/pyile_manager_latest/Pyile.app/Contents/MacOS/: Pyile
pyile_manager_gui/pyile_manager/Services/: APIClient.swift  BackendManager.swift  WebSocketService.swift
pyile_manager_gui/pyile_manager/Views/: MenuBarView.swift  SettingsWindow.swift
pyile_manager_gui/pyile_manager/Views/Components/: GlassCard.swift  SettingRow.swift  URLMappingEditor.swift  WatchlistEditor.swift
(+5 files in other folders)
